--- a/tutorial/secondapp/templates/secondapp/ajax_exam.html
+++ b/tutorial/secondapp/templates/secondapp/ajax_exam.html
@@ -39,7 +39,7 @@
             console.log("#get")
 
             var name = $(".name").val();
-            const ajax = fetch('/second/req/ajax/get/?name=' + name);
+            const ajax = fetch('{% url "secondapp:ajax_get" %}?name=' + name);
             ajax.then(function(response) {
                 return response.text();
             }).then(function(result) {
@@ -58,7 +58,7 @@
             formData.append('csrfmiddlewaretoken', csrftoken);
             formData.append('name', name);
 
-            const ajax = fetch('/second/req/ajax/post/', {
+            const ajax = fetch('{% url "secondapp:ajax_post" %}', {
                 method: 'post',
                 body: formData
             });
@@ -80,7 +80,7 @@
             formData.append('a', 10);
             formData.append('b', 20);
             formData.append('c', 30);
-            const ajax = fetch('/second/req/ajax/json/', {
+            const ajax = fetch('{% url "secondapp:ajax_json" %}', {
                 method: 'post',
                 headers: {
                     'Content-Type': 'application/json',
